                CHANGES IN TraMineRextras VERSION 0.7.5 [2023-01-11]

Changes in existing functions:
    o   seqsplot(), argument `axes` is deprecated and replaced by `xaxis`.
        Argument `yaxis` can now also be one of "all" or "left".
    o   seqsplot(), ylab can be a vector of labels by group level.
    o   seqsplot() supports arguments of legend among the ... list.
    o   plot.stslist.surv(), plot method for objects returned by seqsurv displays
        the ylab closer from the y-axis when yaxis=FALSE. It also recognizes the `cex.lab` argument.
    o   seqsplot(), seqplot.tentrop(), seqplot.tentrop.m(), seqedplot(), plot.dynin(),
        and plot.stslist.surv(): default value of main is now "auto" and NULL suppresses
        the titles as expected.
    o   seqplot.tentrop.m() now in namespace.


                CHANGES IN TraMineRextras VERSION 0.6.5 [2022-10-09]

Changes in existing functions:
    o   seqplot.rf() argument 'plus.one' renamed 'grp.meth'

Bug fixes:
    o   seqplot.rf() which.plot = "diss.to.med" did not work.
    o   seqplot.rf() issue with unwanted ":" in plot title.
    o   sorti() possible conflict between column names of seqdata and arguments passed to order.
    o   issue with non UTF-8 commented line in TraMineRextras.Rd

Misc.:
    o   Replaced `permute(.)` with `sample(.)` in `seqCompare` to remove dependence
        on gtools that has become orphaned.


                CHANGES IN TraMineRextras VERSION 0.6.4 [2022-06-13]

Changes in existing functions:
    o   seqplot.rf() gains a new argument 'plus.one' to control which
        group sizes to increase when number of sequences is not a multiple of number of groups.

Bug fixes:
    o   seqindic.dyn() checked whether fstat is a function by comparing class with a string. Now uses inherits.
    o   Issue with example in seqtabstocc.Rd.
    o   Issue with non literal item name in seqsamm.Rd.


                CHANGES IN TraMineRextras VERSION 0.6.3 [2022-01-19]

New functions: