@@ -1,6 +1,6 @@
 Package: TraMineRextras
 Version: 0.7.6
-Date: 2023-01-11
+Date: 2023-01-13
 Title: TraMineR Extension
 Authors@R: c(
   person("Gilbert", "Ritschard", role = c("aut", "cre", "ths", "cph"),
@@ -15,7 +15,7 @@ Authors@R: c(
   person("Nicolas S.", "Muller", role = "ctb"),
   person("Patrick", "Rousset", role = "ctb"))
 Depends: R (>= 3.5.0), TraMineR (>= 2.2-1)
-Imports: grDevices, graphics, stats, cluster, RColorBrewer, colorspace, survival, doParallel, parallel, foreach
+Imports: grDevices, graphics, stats, survival, cluster, RColorBrewer, colorspace, doParallel, parallel, foreach
 Description: Collection of ancillary functions and utilities to be used in conjunction with the 'TraMineR' package for sequence data exploration. Includes, among others, specific functions such as state survival plots, position-wise group-typical states, dynamic sequence indicators, and dissimilarities between event sequences. Also includes contributions by non-members of the TraMineR team such as the relative frequency plot and methods for polyadic data.
 License: GPL (>= 2)
 URL: http://traminer.unige.ch/
